fix(s3stream/thirdparty): remove unsafe dependencies (#661)
Signed-off-by: Ning Yu <ningyu@automq.com>